--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTIyMTY2MTc1NTUyOTIzMjQwNA.GM8BCN.rjbdU20nlMCWIOjgBVs_HXB7Lcqk1BEJ5mdJyY
+DISCORD_TOKEN=MTIyMTY2MTc1NTUyOTIzMjQwNA.GxKUOz.pZDOrvIZbDr2zKqbqcLkj7JIaOoey3TJ6v2Q7s
